BACK_horseContributorRefactoring_[ADD]_[horseContributor-horseContributorJob]_[CRUD] : implemented new module with all layers
